<resources>
    <string name="app_name">Bar</string>


    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!-- Strings related to login -->
    <string name="error_invalid_custom_token">O formato token personalizado está incorreto. Verifique a documentação.</string>
    <string name="error_custom_token_mismatch">O token personalizado corresponde a um público diferente.</string>
    <string name="error_invalid_credential">A credencial de autenticação fornecida está mal formada ou expirou.</string>
    <string name="error_invalid_email">O endereço de e-mail está mal formatado.</string>
    <string name="error_wrong_password">A senha é inválida ou o usuário não possui uma senha.</string>
    <string name="error_user_mismatch">As credenciais fornecidas não correspondem ao usuário anteriormente assinado.</string>
    <string name="error_requires_recent_login">Esta operação é sensível e requer autenticação recente. Faça o login novamente antes de tentar novamente esta solicitação.</string>
    <string name="error_account_exists_with_different_credential">Uma conta já existe com o mesmo endereço de e-mail, mas credenciais de login diferentes. Faça login usando um provedor associado a este endereço de e-mail.</string>
    <string name="error_email_already_in_use">O endereço de e-mail já está sendo usado por outra conta.</string>
    <string name="error_credential_already_in_use">Esta credencial já está associada a uma conta de usuário diferente.</string>
    <string name="error_user_disabled">A conta de usuário foi desabilitada por um administrador.</string>
    <string name="error_user_token_expired">A credencial do usuário não é mais válida. O usuário deve fazer login novamente.</string>
    <string name="error_user_not_found">Não há registro de usuário correspondente a este identificador. O usuário pode ter sido excluído.</string>
    <string name="error_invalid_user_token">A credencial do usuário não é mais válida. O usuário deve fazer login novamente.</string>
    <string name="error_operation_not_allowed">Esta operação não é permitida. Você deve habilitar este serviço no console.</string>
    <string name="error_weak_password">A senha fornecida não é válida.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_editar_estabelecimento">EditarEstabelecimentoActivity</string>
    <string name="title_activity_info_estabelecimento">InfoEstabelecimentoActivity</string>
    <string name="title_activity_editar_produto">EditarProdutoActivity</string>
    <string name="title_activity_info_produto">InfoProdutoActivity</string>
    <string name="title_activity_editar_produto_avaliacao">EditarProdutoAvaliacao</string>
    <string name="title_activity_editar_estabelecimento_avaliacao">EditarEstabelecimentoAvaliacaoActivity</string>


    <string name="title_estabelecimento">Bar</string>
    <string name="title_produtos">Bebida</string>
    <string name="title_avaliacao">Avaliacao</string>
    <string name="title_activity_pesquisar">PesquisarActivity</string>


    <string name="avaliacao">Avaliação</string>
    <string name="avaliacoes">Avaliaçoes</string>
    <string name="sem_nenhuma_avaliacao">Sem nenhuma avaliação</string>
    <string name="produtos">Bebidas</string>
    <string name="nenhum_produto_cadastrado">Nenhum bebida cadastrada</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="criar_conta">Ainda não possui conta? Crie um</string>
    <string name="sair">Sair</string>
    <string name="estabelecimento">Bar</string>
    <string name="texto_avaliacao">Texto avaliação</string>
    <string name="salvar">Salvar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="novo_estabelecimento">Novo Estabelecimento</string>
    <string name="nenhum_registro_encontrado">Nenhum registro encontrado</string>

    <string name="nome_produto">Nome da bebida</string>
    <string name="preco_produto">Preço da bebida</string>
    <string name="descricao_produto">Descricao da bebida</string>

    <string name="atualizar">Atualizar</string>

    <string name="nome_estabelecimento">Nome do bar</string>
    <string name="endereco">Endereço</string>


    <string name="nome">Nome</string>
    <string name="digite_novamente_a_senha">Digite novamente a senha</string>
    <string name="salvar_conta">Criar Conta</string>
    <string name="ja_e_um_membro">já é um membro? Entrar</string>

    <string name="informe_nome_estabelecimento">Informe o nome do bar</string>

    <string name="informe_nome_produto">Informe o nome do bebida</string>
    <string name="informe_preco_produto">Informe o preço do bebida</string>
</resources>
