<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.igor.apptcc.estabelecimento.EditarEstabelecimentoActivity"
    tools:showIn="@layout/activity_editar_estabelecimento">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:src="@drawable/ic_estabelecimento"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="14dp"
            android:layout_gravity="center_horizontal" />


        <!--  Nome Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nome_estabelecimento"
                tools:ignore="Autofill"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/lnlEnderecoAlterEstabelecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endereco"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/txtEnderecoAlterEstabelecimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/TextAppearance.AppCompat.Body2"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryColor"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_salvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/atualizar"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
